--- a/SITE/src/main/resources/templates/student_projects.html
+++ b/SITE/src/main/resources/templates/student_projects.html
@@ -207,14 +207,11 @@
 
                             <div class="mb-3">
                                 <strong>Objectives:</strong>
-                                <div>
-                      <span
-                              th:each="obj : ${#strings.arraySplit(project.objectives, ',')}"
-                              class="objective-badge"
-                      >
-                        <i class="fas fa-hashtag me-1"></i>
-                        <span th:text="${obj.trim()}"></span>
-                      </span>
+                                <div class="d-flex flex-wrap gap-2 mt-2">
+                                    <span th:each="obj : ${project.objectives}" class="objective-badge">
+                                        <i class="fas fa-hashtag me-1"></i>
+                                    <span th:text="${obj}"></span>
+                                    </span>
                                 </div>
                             </div>
 
