Update Endpoints of Student Management Controller and Project Controller by Applying necessary Authorization Rules

--- a/SITE/src/main/resources/static/css/student_projects.css
+++ b/SITE/src/main/resources/static/css/student_projects.css
@@ -168,3 +168,9 @@ footer {
   color: #004d40;
   margin-right: 5px;
 }
+
+.alert-error {
+  background-color: #f6061a;
+  color: #ffffff;
+  border-color: #f6061a;
+}
