--- a/SITE/src/main/resources/templates/project_student_management.html
+++ b/SITE/src/main/resources/templates/project_student_management.html
@@ -83,10 +83,17 @@
             </div>
             <div class="col-md-6">
               <p class="mb-3">
-                <strong><i class="fas fa-bullseye me-2"></i>Objectives:</strong
-                ><br />
-                <span class="text-muted" th:text="${project.objectives}"></span>
+                <strong><i class="fas fa-bullseye me-2"></i>Objectives:</strong>
               </p>
+              <div class="d-flex flex-wrap gap-2 mt-2">
+                      <span
+                              th:each="obj : ${project.objectives}"
+                              class="objective-badge"
+                      >
+                        <i class="fas fa-hashtag me-1"></i>
+                        <span th:text="${obj}"></span>
+                      </span>
+              </div>
             </div>
           </div>
         </div>
